--- a/index.html
+++ b/index.html
@@ -411,20 +411,22 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
     </header>
 
     <main style=" position: relative;z-index: 100; width: 100%;">
-        <div class="containe" id="mainContent" >
+        <div class="containe" id="mainContent">
             <!-- Home View -->
-            <div id="homeView" >
+            <div id="homeView">
                 <h1 style="text-align: center; margin-bottom: 30px;">Advanced Competitive Coding Practice</h1>
                 <div class="options-container">
                     <div class="card">
                         <h2 class="card-title">Mock MCQ Exam</h2>
-                        <p class="card-description" style="color: white;">Take a timed mock exam with 30 random questions to test your
+                        <p class="card-description" style="color: white;">Take a timed mock exam with 30 random
+                            questions to test your
                             knowledge.</p>
                         <button class="btn btn-block" id="startMockExam">Start Mock Exam</button>
                     </div>
                     <div class="card">
                         <h2 class="card-title">Practice All Questions</h2>
-                        <p class="card-description" style="color: white;">Go through all questions at your own pace with instant feedback.</p>
+                        <p class="card-description" style="color: white;">Go through all questions at your own pace with
+                            instant feedback.</p>
                         <button class="btn btn-block" id="startPractice">Start Practice</button>
                     </div>
                 </div>
@@ -1836,6 +1838,10 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
         // Start the app
         initialize();
     </script>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
