--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         }
 
         header {
-            background: linear-gradient(135deg, #00000000, var(--secondary-color));
+            background: linear-gradient(135deg, #ffffff00, #ffffff00);
             color: white;
             padding: 20px 0;
-            box-shadow: var(--shadow);
+            /* box-shadow: var(--shadow); */
         }
 
         .header-content {
@@ -308,7 +308,7 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
             z-index: -1;
             /* backdrop-filter: hue-rotate(90deg); */
             /* mask: linear-gradient(45deg, #0000, #000); */
-            animation: rotaty 5s linear infinite;
+            /* animation: rotaty 5s linear infinite; */
             transform-origin: center;
         }
 
@@ -342,24 +342,23 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
             --f: blur(7em) brightness(5);
             --c: #09f;
             animation:
-                blobs-1e28bd3d 150s linear infinite,
                 thingy 5s linear infinite;
             background-color: #000000;
             background-image: radial-gradient(ellipse 66px 50px at 50% 50%,
                     #0f0 0%,
                     transparent 100%),
                 radial-gradient(ellipse 77px 60px at 50% 50%, rgb(229, 255, 0) 0%, transparent 100%),
-                radial-gradient(ellipse 78px 100px at 50% 50%, #0f0 0%, transparent 100%),
-                radial-gradient(ellipse 73px 96px at 50% 50%, #0f0 0%, transparent 100%),
-                radial-gradient(ellipse 76px 77px at 50% 50%, #0f0 0%, transparent 100%),
+                radial-gradient(ellipse 78px 100px at 50% 50%, rgb(85, 255, 0) 0%, transparent 100%),
+                radial-gradient(ellipse 73px 96px at 50% 50%, rgb(0, 255, 115) 0%, transparent 100%),
+                radial-gradient(ellipse 76px 77px at 50% 50%, rgb(0, 255, 162) 0%, transparent 100%),
                 radial-gradient(ellipse 66px 51px at 50% 50%, #0f0 0%, transparent 100%),
-                radial-gradient(ellipse 90px 57px at 50% 50%, #0f0 0%, transparent 100%),
-                radial-gradient(ellipse 89px 93px at 50% 50%, #0f0 0%, transparent 100%);
+                radial-gradient(ellipse 90px 57px at 50% 50%, rgb(0, 255, 255) 0%, transparent 100%),
+                radial-gradient(ellipse 89px 93px at 50% 50%, rgb(0, 191, 255) 0%, transparent 100%);
             background-size:
                 726px 576px,
                 1242px 454px,
                 876px 1160px,
-                691px 873px,
+                691px 873px,    
                 914px 550px,
                 1159px 340px,
                 1017px 831px,
@@ -398,14 +397,14 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
     <div class="container"></div>
     <header>
         <div class="containe header-content" style="position: relative; z-index: 100;">
-            <div class="logo">AT$</div>
+            <div class="logo"><img src="logo.png" alt="logo" width="55px"></div>
             <a href="#" class="home-link" id="homeButton">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" viewBox="0 0 16 16">
                     <path
                         d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z" />
                     <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z" />
                 </svg>
-                Home
+                <span style="font-size: 23px;">Home</span>
             </a>
         </div>
     </header>
@@ -476,6 +475,9 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
             </div>
         </div>
     </main>
+    <footer style="color: white; position: absolute; bottom: 10px; width: 100%; text-align: center;">
+        Made by Ayushman Tomar
+    </footer>
 
     <script>
         // Store all questions 
