--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
             </div>
         </div>
     </main>
-    <footer style="color: white; position: absolute; bottom: 10px; width: 100%; text-align: center;">
+    <footer style="color: white; position: absolute; bottom: 10px; width: 100%; text-align: center; min-height: 100px; padding-top: 90%;">
         Made by Ayushman Tomar
     </footer>
 
