--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
 
         .container::before {
             content: "";
-            position: absolute;
+            position: fixed;
             inset: -8em;
             z-index: -1;
             --f: blur(7em) brightness(5);
@@ -475,7 +475,7 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
             </div>
         </div>
     </main>
-    <footer style="color: white; position: absolute; bottom: 10px; width: 100%; text-align: center; min-height: 100px; padding-top: 90%;">
+    <footer style="color: white; width: 100%; text-align: center; margin-top:60px; margin-bottom: 10pxs;">
         Made by Ayushman Tomar
     </footer>
 
