--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ More comprehensive version at shenanigans.shoghisimon.ca/collection/css-blur-blo
                 <div class="options-container">
                     <div class="card">
                         <h2 class="card-title">Mock MCQ Exam</h2>
-                        <p class="card-description" style="color: white;">Take a timed mock exam with 30 random
+                        <p class="card-description" style="color: white;">Take a mock exam with 30 random
                             questions to test your
                             knowledge.</p>
                         <button class="btn btn-block" id="startMockExam">Start Mock Exam</button>
